Add a sdk class and a basic system test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/integration/**/*.spec.ts",
+    "system-test": "mocha -r ts-node/register test/system/**/*.spec.ts"
   },
   "keywords": [
     "Serverless",
@@ -19,6 +20,12 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.5.5",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.0",
     "typescript": "^3.0.1",
     "typings": "^2.1.1"
   },
