--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "./node_modules/.bin/tsc",
     "test": "mocha -r ts-node/register test/integration/**/*.spec.ts",
     "system-test": "mocha -r ts-node/register test/system/**/*.spec.ts",
-    "lint": "tslint {source,test}/**/*.ts"
+    "lint": "tslint {source,test}/**/*.ts",
+    "ci-publish": "ci-publish"
   },
   "keywords": [
     "Serverless",
@@ -25,6 +26,7 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.5",
     "chai": "^4.1.2",
+    "ci-publish": "^1.3.1",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
