--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@adastradev/serverless-discovery-sdk",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Serverless Service Discovery API",
   "main": "dist/index.js",
   "scripts": {
     "build": "./node_modules/.bin/tsc",
     "test": "mocha -r ts-node/register test/integration/**/*.spec.ts",
     "system-test": "mocha -r ts-node/register test/system/**/*.spec.ts",
-    "lint": "tslint {source,test}/**/*.ts",
-    "ci-publish": "ci-publish"
+    "lint": "tslint {source,test}/**/*.ts"
   },
   "keywords": [
     "Serverless",
