Pair programming for PR review - fix location of config for system tests

--- a/test/system/config.ts.sample
+++ b/test/system/config.ts.sample
@@ -1,4 +1,4 @@
 export const Config = {
-    aws_region: 'us-east-1',
+    aws_region: 'AWS_REGION',
     discovery_service_endpoint: 'DISCOVERY_ENDPOINT'
 };
