--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.5",
-    "chai": "^4.1.2",
-    "ci-publish": "^1.3.1",
-    "mocha": "^5.2.0",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
-    "typings": "^2.1.1"
+    "@types/chai": "^4.1.7",
+    "@types/find-package-json": "^1.1.0",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^12.0.0",
+    "@types/tmp": "^0.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "tmp": "^0.1.0",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
-    "aws-api-gateway-client": "^0.2.16"
+    "aws-api-gateway-client": "^0.2.17",
+    "find-package-json": "^1.2.0"
   }
 }
