--- a/test/system/config.ts.sample
+++ b/test/system/config.ts.sample
@@ -1,4 +1,4 @@
 export const Config = {
-    aws_region: 'us-east-1',
-    discovery_service_endpoint: 'DISCOVERY_ENDPOINT'
+    aws_region: 'AWS_REGION',
+    discovery_service_endpoint: 'DISCOVERY_SERVICE'
 };
