--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adastradev/serverless-discovery-sdk",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Serverless Service Discovery API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,7 +36,7 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "aws-api-gateway-client": "^0.2.17"
+    "@adastradev/aws-api-gateway-client": "^0.2.18-beta.1"
   },
   "files": [
     "/dist"
