--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "aws-api-gateway-client": "^0.3.3"
   },
   "snyk": true,
